--- a/website.css
+++ b/website.css
@@ -5,6 +5,8 @@
 .header{
   background-color: hsl(234, 80%, 31%);
 width: 100%;
+position: fixed;
+z-index: 1; 
 }
 .head{
   margin-right: 8px;
@@ -21,6 +23,12 @@ width: 100%;
 .service{
   background-color: #008dc4;
 width: 100%;
+
+}
+.content{
+width: auto;
+padding: auto;
+
 }
 .csc{
   background-color: lightblue;
@@ -28,13 +36,13 @@ width: 25%;
 
 border: 5px solid rgb(255, 255, 255);
 
-padding: 20%;
+padding: auto;
 float:left;
 }
 .bank{
   background-color: lightblue;
   width: 25%;
-padding: 20%;
+  padding: auto;
 border: 5px solid rgb(255, 255, 255);
 
 float:left;
@@ -43,23 +51,24 @@ float:left;
   background-color:lightblue ;
   width: 25%;
   border: 5px solid rgb(255, 255, 255);
-padding: 20%;
+  padding: auto;
 float: left;
 }
 .dtp{
   background-color: lightblue;
-  width: 25%;
+  width: 20%;
   border:5px solid rgb(255, 255, 255);
-padding: 20%;
+padding: auto;
 float: left;
 }
-.contact{
+.third{
+
   background-color: rgb(7 35 76 / 82%);
-  padding: 20%;
+
+  padding: auto%;
+
 }
-.content{
-background-color: orange;
-}
-.about{
-background: rgb(214, 9, 9);
+.fourth{
+background: rgb(30 16 58);
+width: 100%;
 }
