--- a/website.css
+++ b/website.css
@@ -25,62 +25,31 @@ width: 100%;
 
 
 }
+.serviceback{
+  background-color:#008dc4 ;
+}
 .content{
 width: 100%;
-margin-block-end: 0%;
+
 padding: auto;
 
 
 }
-.csc{
-  background-color: lightblue;
-  width: 25%;
 
-border: 3px solid rgb(255, 255, 255);
-margin-left: auto;
-padding: auto;
-float:left;
-
-}
-.bank{
-  background-color: lightblue;
-  width: 25%;
-
-  padding: auto;
-border: 3px solid rgb(255, 255, 255);
-
-float:left;
-}
-.computer {
-  background-color:lightblue ;
-  width: 25%;
-  border: 3px solid rgb(255, 255, 255);
-  padding: auto;
-float: left;
-}
-.dtp{
-  background-color: lightblue;
-  width: 25%;
-  border:3px solid rgb(255, 255, 255);
-padding: auto;
-float: left;
-}
 .third{
 
   background-color: rgb(7 35 76 / 82%);
 width: 100%;
-  padding: auto%;
+  padding: 10%;
 
 }
-
 .fourth{
-  background-image: url("images/about.jpg");
-  background-position: center;
-  
-  background-repeat: no-repeat;
-  background-size: cover;
-  
-  flex-grow: 1;
-  
-  }
-  
+background-image: url("images/about.jpg");
+background-position: center;
+
+background-repeat: no-repeat;
+background-size: cover;
+
+flex-grow: 1;
+
+}
